Fixed dashboard tiny horizontal overflow

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,7 +19,7 @@
 .sidebar {
 	height: 100%;
   padding-top: 20px;
-  overflow:auto;
+  overflow-y:auto;
 }
 
 .card-text {
@@ -49,7 +49,7 @@
 
 #stock-details-panel {
 	height: 20%;
-	overflow: auto;
+	overflow-y: auto;
 }
 
 #tweetsPanel {
@@ -81,8 +81,6 @@
 }
 
 .overlay {
-	width: 100%;
-	height: 100%;
 	position: absolute;
 	top: 50px;
 	left: 50px;
@@ -107,7 +105,7 @@
   border: 16px solid #f3f3f3; /* Light grey */
   border-top: 16px solid #3498db; /* Blue */
   border-radius: 50%;
-  width: 120px;
+  width: 100%;
   height: 120px;
   animation: spin 2s linear infinite;
 }
@@ -123,7 +121,6 @@
 	text-align: center;
 	margin: 0 auto;
 	padding: 0;
-	width: 200px;
 	height: 40px;
 }
 
@@ -137,7 +134,6 @@
 	text-align: center;
 	margin: 0 auto;
 	padding: 0;
-	width: 200px;
 	height: 40px;
 }
 
